--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment 1</title>
@@ -19,12 +19,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-  </head>
+</head>
   <body>
-    <header>
-      <div class="header_1">
-        <h1 class="nav-left"><a href="index.html">ARSHA</a></h1>
-        <ul class="nav-right">
+    <header class="header">
+      <div class="header_left">
+        <div class="header_left_logo"><a href="index.html">ARSHA</a></div>
+      </div>
+      <div class="header_right">
+        <ul class="header_right_list">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
@@ -33,89 +35,86 @@
           <li><a href="#">Pricing</a></li>
           <li><a href="#">Dropdown</a></li>
           <li><a href="#">Contact</a></li>
-          <li><button class="btn">Get Started</button></li>
         </ul>
+        <button class="header_right_btn">Get Started</button>
+        <img src="img/hamburger.svg" alt="hamburger" class="header_right_hamburger">
       </div>
     </header>
     <section class="hero">
       <div class="hero_left">
-        <div class="hero_text">
+        <div class="hero_left_text">
           <h1>Better Solutions For Your Business</h1>
           <p>
             We are team of talented designers making websites with Bootstrap
           </p>
         </div>
-        <div class="hero_btns">
-          <a href="#"><button class="btn">Get Started</button></a>
+        <div class="hero_left_btn">
+          <button>Get Started</button>
         </div>
       </div>
       <div class="hero_right">
-        <img src="./hero-img.png" alt="hero-image" />
+        <img src="/img/hero-img.png" alt="hero-image" />
       </div>
     </section>
-    <div class="slider-container">
-      <div class="slider">
-        <div class="slide"><img src="icon_1.png" alt="Icon 1" /></div>
-        <div class="slide"><img src="icon_2.png" alt="Icon 2" /></div>
-        <div class="slide"><img src="icon_3.png" alt="Icon 3" /></div>
-        <div class="slide"><img src="icon_1.png" alt="Icon 4" /></div>
-        <div class="slide"><img src="icon_2.png" alt="Icon 5" /></div>
-        <div class="slide"><img src="icon_3.png" alt="Icon 6" /></div>
-        <div class="slide"><img src="icon_1.png" alt="Icon 1" /></div>
-        <div class="slide"><img src="icon_2.png" alt="Icon 2" /></div>
-        <div class="slide"><img src="icon_3.png" alt="Icon 3" /></div>
-        <div class="slide"><img src="icon_1.png" alt="Icon 4" /></div>
-        <div class="slide"><img src="icon_2.png" alt="Icon 5" /></div>
-        <div class="slide"><img src="icon_3.png" alt="Icon 6" /></div>
-      </div>
+    <div class="slider">
+        <div class="slider_item"><img src="/img/icon_1.png" alt="Icon 1" /></div>
+        <div class="slider_item"><img src="/img/icon_2.png" alt="Icon 2" /></div>
+        <div class="slider_item"><img src="/img/icon_3.png" alt="Icon 3" /></div>
+        <div class="slider_item"><img src="/img/icon_1.png" alt="Icon 4" /></div>
+        <div class="slider_item"><img src="/img/icon_2.png" alt="Icon 5" /></div>
+        <div class="slider_item"><img src="/img/icon_3.png" alt="Icon 6" /></div>
+        <div class="slider_item"><img src="/img/icon_1.png" alt="Icon 1" /></div>
+        <div class="slider_item"><img src="/img/icon_2.png" alt="Icon 2" /></div>
+        <div class="slider_item"><img src="/img/icon_3.png" alt="Icon 3" /></div>
+        <div class="slider_item"><img src="/img/icon_1.png" alt="Icon 4" /></div>
+        <div class="slider_item"><img src="/img/icon_2.png" alt="Icon 5" /></div>
+        <div class="slider_item"><img src="/img/icon_3.png" alt="Icon 6" /></div>
     </div>
     <section class="about">
-      <div class="about_us">
-        <h2>ABOUT US</h2>
-        <div class="line">
-          <div class="line_1"></div>
-          <div class="line_2"></div>
-          <div class="line_3"></div>
+      <div class="about_top">
+        <h2 class="about_top_heading">ABOUT US</h2>
+        <div class="about_top_underline">
+          <div class="about_top_underline_1"></div>
+          <div class="about_top_underline_2"></div>
+          <div class="about_top_underline_3"></div>
         </div>
-        <div class="about_text">
-          <div class="about_left">
-            <p>
+      </div>
+      <div class="about_text">
+        <div class="about_text_left">
+          <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Necessitatibus nemo, sequi delectus aliquid iure odio explicabo
               itaque omnis quod quia.
-            </p>
-            <ul>
-              <li>
+          </p>
+          <ul>
+            <li>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Corporis, nihil.
-              </li>
-              <li>
+            </li>
+            <li>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, ex.
-              </li>
-              <li>
+            </li>
+            <li>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Error,
                 impedit?
-              </li>
-            </ul>
-          </div>
-          <div class="about_right">
-            <p>
+            </li>
+          </ul>
+        </div>
+        <div class="about_text_right">
+          <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque
               quo quod incidunt earum a cupiditate quam nesciunt, iusto et harum
               facilis blanditiis magnam necessitatibus. Qui at vitae quas
               molestias, labore tenetur vel earum mollitia voluptatem, expedita
               quasi magnam obcaecati fugit repellat voluptatum deleniti! Sit
               veniam quod atque asperiores nesciunt dolorem.
-            </p>
-            <a href="#"><button class="read_btn">Read more</button></a>
-          </div>
+          </p>
+          <button class="about_text_right_btn">Read more</button>
         </div>
       </div>
     </section>
-
-    <section class="why_us">
-      <div class="whyus_left">
-        <div class="whyus_text">
+    <section class="whyus">
+        <div class="whyus_left">
           <h3>
             <span>Eum ipsam laborum deleniti</span>
             velit pariatur architecto aut nihil
@@ -125,35 +124,34 @@
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis
             aute irure dolor in reprehenderit
           </p>
-          <div class="questions">
-            <div class="options">
+          <div class="whyus_left_faq">
+            <div class="whyus_left_faq_option">
               <h4>
                 01 <span>Non consectetur a erat nam at lectus urna duis?</span>
               </h4>
             </div>
-            <div class="options">
+            <div class="whyus_left_faq_option">
               <h4>
                 02 <span>Non consectetur a erat nam at lectus urna duis?</span>
               </h4>
             </div>
-            <div class="options">
+            <div class="whyus_left_faq_option">
               <h4>
                 03 <span>Non consectetur a erat nam at lectus urna duis?</span>
               </h4>
             </div>
           </div>
         </div>
-      </div>
       <div class="whyus_right">
-        <img src="./why-us.png" alt="whyus-image" />
+        <img src="/img/why-us.png" alt="whyus-image" />
       </div>
     </section>
     <section class="skills">
       <div class="skills_left">
-        <img src="./skills.png" alt="skills-image" />
+        <img src="/img/skills.png" alt="skills-image" />
       </div>
       <div class="skills_right">
-        <div class="whyus_text">
+        <div class="skills_right_text">
           <h3>
             <span>Eum ipsam laborum deleniti</span>
             velit pariatur architecto aut nihil
@@ -163,37 +161,39 @@
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis
             aute irure dolor in reprehenderit
           </p>
-          <div>
-            <div>
-              <span class="skill">
+        </div>
+          <div class="skills_right_progress">
+            <div class="skills_right_progress_bar">
+              <span class="skills_right_progress_bar_skill">
                 <span>HTML</span>
                 <i class="val">70%</i>
               </span>
-              <div class="progress"><div class="progress_bar" style="width: 70%;"></div></div>
+              <div class="skills_right_progress_bar_parent"><div class="skills_right_progress_bar_child" style="width: 70%;"></div></div>
             </div>
-            <div>
-              <span class="skill">
+            <div class="skills_right_progress_bar">
+              <span class="skills_right_progress_bar_skill">
                 <span>CSS</span>
                 <i class="val">90%</i>
               </span>
-              <div class="progress"><div class="progress_bar" style="width: 90%;"></div></div>
+              <div class="skills_right_progress_bar_parent">
+                <div class="skills_right_progress_bar_child" style="width: 90%;">
+                </div>
+              </div>
             </div>
-            <div>
-              <span class="skill">
+            <div class="skills_right_progress_bar">
+              <span class="skills_right_progress_bar_skill">
                 <span>JAVASCRIPT</span>
                 <i class="val">80%</i>
               </span>
-              <div class="progress"><div class="progress_bar" style="width:80%;"></div></div>
+              <div class="skills_right_progress_bar_parent"><div class="skills_right_progress_bar_child" style="width:80%;"></div></div>
             </div>
-            <div>
-              <span class="skill">
+            <div class="skills_right_progress_bar">
+              <span class="skills_right_progress_bar_skill">
                 <span>PHOTOSHOP</span>
                 <i class="val">60%</i></span>
-              <div class="progress"><div class="progress_bar" style="width:60%;"></div></div>
+              <div class="skills_right_progress_bar_parent"><div class="skills_right_progress_bar_child" style="width:60%;"></div></div>
             </div>
           </div>
-            
-        </div>
       </div>
       </div>
     </section>
@@ -210,43 +210,41 @@
         </div>
         <div class="profiles">
           <div class="person">
-            <img src="./testimonials-2.jpg" alt="person1">
+            <img src="/img/testimonials-2.jpg" alt="person1">
             <p>John Doe</p>
             <p>CEO, ABC Company</p>
           </div>
           <div class="person">
-            <img src="./testimonials-2.jpg" alt="person1">
+            <img src="/img/testimonials-2.jpg" alt="person1">
             <p>Khifawe</p>
             <p>MAnager</p>
           </div>
           <div class="person">
-            <img src="./testimonials-2.jpg" alt="person1">
+            <img src="/img/testimonials-2.jpg" alt="person1">
             <p>Mary</p>
             <p>CEO</p>
           </div>
         </div>
       </div>
     </section>
-
     <script
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
     integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
-  ></script>
-  <script
+    ></script>
+    <script
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.4.1/jquery-migrate.min.js"
     integrity="sha512-KgffulL3mxrOsDicgQWA11O6q6oKeWcV00VxgfJw4TcM8XRQT8Df9EsrYxDf7tpVpfl3qcYD96BpyPvA4d1FDQ=="
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
-  ></script>
-  <script
+    ></script>
+    <script
     src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
     integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
-  ></script>
-		
+    ></script>
     <script type="text/javascript">
       $(document).ready(function(){
         $('.slider').slick({
